# connectedhomeip

./: .gitignore  .gitmodules  ____init_____8py.html  _adapter_iterator_8cpp.html  _adapter_iterator_8h.html  _adapter_iterator_8h_source.html  _adapter_listing_8mm.html  _additional_data_payload_8h.html  _additional_data_payload_8h_source.html  _additional_data_payload_generator_8cpp.html  _additional_data_payload_generator_8h.html  _additional_data_payload_generator_8h_source.html  _additional_data_payload_parser_8cpp.html  _additional_data_payload_parser_8h.html  _additional_data_payload_parser_8h_source.html  _admin_pairing_table_8cpp.html  _admin_pairing_table_8h.html  _admin_pairing_table_8h_source.html  _advertiser_8h.html  _advertiser_8h_source.html  _advertiser___impl_minimal_mdns_8cpp.html  _advertiser___impl_none_8cpp.html  _android_ble_application_delegate_8cpp.html  _android_ble_application_delegate_8h.html  _android_ble_application_delegate_8h_source.html  _android_ble_connection_delegate_8cpp.html  _android_ble_connection_delegate_8h.html  _android_ble_connection_delegate_8h_source.html  _android_ble_platform_delegate_8cpp.html  _android_ble_platform_delegate_8h.html  _android_ble_platform_delegate_8h_source.html  _android_chip_stack_8java.html  _android_device_controller_wrapper_8cpp.html  _android_device_controller_wrapper_8h.html  _android_device_controller_wrapper_8h_source.html  _android_persistent_storage_delegate_8java.html  _async_d_n_s_resolver_sockets_8cpp.html  _async_d_n_s_resolver_sockets_8h.html  _async_d_n_s_resolver_sockets_8h_source.html  _b_l_e_8cpp.html  (+2667 more)
examples/jf-admin-app/: BUILD.gn  RpcServer.cpp  RpcServer.h  args.gni  main.cpp
examples/jf-admin-app/jf-admin-app-common/: BUILD.gn  jf-admin-app.matter  jf-admin-app.zap
examples/jf-admin-app/jfa-common/: BUILD.gn  jfa-app.matter  jfa-app.zap
examples/jf-admin-app/linux/: BUILD.gn  ControlPlane.cpp  ControlPlane.h  JFAdminAppManager.cpp  JFAdminAppManager.h  RpcClient.cpp  RpcClient.h  RpcServer.cpp  RpcServer.h  args.gni  main.cpp
examples/jf-admin-app/linux/include/: CHIPProjectAppConfig.h
examples/jf-control-app/: .gn  BUILD.gn  GrpcServer.cpp  GrpcServer.h  JFAdmin.cpp  JFAdmin.h  RpcClient.cpp  RpcClient.h  RpcServer.cpp  RpcServer.h  SocketServer.cpp  SocketServer.h  args.gni  jf-control-app.gni  main.cpp  pw.gni
examples/jf-control-app/commands/clusters/: ClusterCommand.h  ReportCommand.h  WriteAttributeCommand.h
examples/jf-control-app/commands/common/: CHIPCommand.cpp  CHIPCommand.h  Commands.cpp
examples/jf-control-app/commands/interactive/: Commands.h  InteractiveCommands.cpp  InteractiveCommands.h
examples/jf-control-app/commands/joint-fabric/: Commands.h  JointFabricCommand.cpp  JointFabricCommand.h  ShowDatastoreCommand.cpp  ShowDatastoreCommand.h
examples/jf-control-app/commands/pairing/: Commands.h  OpenCommissioningWindowCommand.cpp  PairingCommand.cpp  PairingCommand.h
examples/jf-control-app/commands/rpc/: Commands.h  RpcCommands.cpp  RpcCommands.h  RpcConnect.cpp  RpcConnect.h
examples/jf-control-app/control_server/: ControlServer.cpp  ControlServer.h  SocketServer.cpp  SocketServer.h
examples/jf-control-app/device_manager/: DeviceDatastoreCache.cpp  DeviceDatastoreCache.h  DeviceManager.cpp  DeviceManager.h
examples/jf-control-app/include/: CHIPProjectAppConfig.h
examples/jf-control-app/webui/: WebSocketClient.h
examples/jf-control-app/webui-2_0/MatterApplicationBackend/src/: chip_tool_web.cpp
examples/jf-control-app/webui-2_0/MatterApplicationUIMaterial/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json  webpack.config.js
examples/jf-control-app/webui-2_0/MatterApplicationUIMaterial/src/: api_addresses.ts  index.html  output-styles.css  styles.css
examples/jf-control-app/webui-2_0/MatterApplicationUIMaterial/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts
examples/jf-control-app/webui-2_0/frontend2/: chunk-AL4BSQE7.js  chunk-FL2HEI2I.js  index.html  main-BSTELPRH.js  scripts-P6SUL76X.js  styles-AYTLFAWH.css
examples/jf-control-app/webui-2_0/package/: create-frontend2-package.sh  install-webui-frontend.sh
examples/jf-control-app/webui/websocketapp/: close.hpp  connection.hpp  endpoint.hpp  error.hpp
examples/jf-control-app/webui/websocketapp/common/: asio.hpp  asio_ssl.hpp  chrono.hpp  connection_hdl.hpp  cpp11.hpp  functional.hpp  memory.hpp  network.hpp  random.hpp  system_error.hpp  thread.hpp  time.hpp  type_traits.hpp
examples/jf-control-app/webui/websocketapp/concurrency/: basic.hpp
examples/jf-control-app/webui/websocketapp/config/: asio.hpp  asio_client.hpp  asio_no_tls.hpp  asio_no_tls_client.hpp  boost_config.hpp  core.hpp  core_client.hpp  debug.hpp  debug_asio.hpp  debug_asio_no_tls.hpp  minimal_client.hpp  minimal_server.hpp
examples/jf-control-app/webui/websocketapp/extensions/: extension.hpp
examples/jf-control-app/webui/websocketapp/extensions/permessage_deflate/: disabled.hpp  enabled.hpp
examples/jf-control-app/webui/websocketapp/http/: constants.hpp  parser.hpp  request.hpp  response.hpp
examples/jf-control-app/webui/websocketapp/http/impl/: parser.hpp  request.hpp  response.hpp
examples/jf-control-app/webui/websocketapp/impl/: connection_impl.hpp
examples/jf-control-app/webui/websocketapp/logger/: basic.hpp  levels.hpp  stub.hpp  syslog.hpp
examples/jf-control-app/webui/websocketapp/message_buffer/: alloc.hpp  message.hpp  pool.hpp
examples/jf-control-app/webui/websocketapp/processors/: base.hpp  hybi00.hpp  hybi07.hpp  hybi08.hpp  hybi13.hpp  processor.hpp
examples/jf-control-app/webui/websocketapp/random/: random_device.hpp
examples/jf-control-app/webui/websocketapp/roles/: client_endpoint.hpp  server_endpoint.hpp
examples/jf-control-app/webui/websocketapp/transport/asio/: base.hpp  connection.hpp  endpoint.hpp
examples/jf-control-app/webui/websocketapp/transport/base/: connection.hpp  endpoint.hpp
(+550 files in other folders)
