
import("//pw_rpc.gni")

executable("jf-admin-app") {
  deps = [
    "$dir_pw_log",
    "$dir_pw_rpc:server",
    "$dir_pw_rpc/system_server",
    "$dir_pw_rpc/system_server:socket",
    "$dir_pw_hdlc:default_addresses",
    "$dir_pw_hdlc:rpc_channel_output",
    "${chip_root}/src/platform/logging:stdio",
    "${chip_root}/src/lib/support:support",
    "${chip_root}/examples/common/pigweed:test.nanopb_rpc"
  ]

  deps += pw_build_LINK_DEPS

  sources = [
    "main.cpp",
    "RpcServer.cpp",
    "${chip_root}/examples/platform/linux/system_rpc_server.cc"
  ]

  output_dir = root_out_dir
}

group("default") {
  deps = [ ":jf-admin-app" ]
}
