
import("//build_overrides/chip.gni")

import("${chip_root}/config/standalone/args.gni")

chip_device_project_config_include = "<CHIPProjectConfig.h>"
chip_project_config_include = "<CHIPProjectConfig.h>"
chip_system_project_config_include = "<SystemProjectConfig.h>"

chip_project_config_include_dirs =
    [ "${chip_root}/examples/jf-admin-app/include" ]
chip_project_config_include_dirs += [ "${chip_root}/config/standalone" ]
